# rust_cpp_example

./: Cargo.toml  README.md  build.rs
.github/workflows/: main.yml  release.yml
src/: main.cpp  main.rs
